# PlexMusicRatingsSync

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: continuous-delivery.yml
src/plex_music_ratings_sync/: __init__.py  __main__.py  cli.py  config.py  config.template.yml  lock.py  logger.py  ratings.py  state.py  sync.py
src/plex_music_ratings_sync/util/: datetime.py  paths.py
